# XORCrypter

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Main.qml  main.cpp  tablemodel.cpp  tablemodel.h  worker.cpp  worker.h  xorqtquick.cpp  xorqtquick.h
components/: AppCheckBox.qml  CustomButton.qml  CustomCheckBox.qml  CustomDialog.qml  CustomFrame.qml  CustomLabel.qml  CustomProgressBar.qml  CustomTextField.qml  HistoryTable.qml  HistoryTableView.qml  SpinSlider.qml
